--- a/banking.html
+++ b/banking.html
@@ -18,7 +18,7 @@
         <!-- Balance and Transaction -->
         <section class="mt-8">
             <div class="grid grid-cols-3 gap-4  text-white">
-                <div class=" p-8 rounded">
+                <div class="bg-red-300 p-8 rounded">
                     <div class="text-2xl">Deposite</div>
                     <div class="text-5xl">$<span id="deposit-total">00</span> </div>
                 </div>
@@ -31,7 +31,7 @@
                     <div class="text-5xl">$<span id="balance-total">1240</span> </div>
                 </div>
             </div>
-        </section>=
+        </section>
         <!-- Deposit and Withdraw  -->
         <section class="mt-4">
             <div class="grid grid-cols-2 gap-4">
